# PromeTorch

./: .dockerignore  .gitattributes  .gitignore  AVOIDRECURSION.md  BENCH_10MODELS.md  BENCH_A100_HEAVY.md  BENCH_CIFAR.md  BENCH_DCGAN.md  BENCH_ELBRUS.md  BENCH_NMCARD.md  BENCH_OLLAMA.md  BENCH_VAE.md  BUILD_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE.md.bak  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUDA_CRASH_INVESTIGATION.md  Dockerfile  Dockerfile.cuda  ELBRUS_REPORT.md  EXAMPLES_VERIFIED.md  GAP_ANALYSIS_VS_PYTORCH.md  INFRASTRUCTURE_AUDIT.md  JOURNAL.md  JOURNAL_BREAKDOWNS.md  LICENSE  PROMEPEDIA.md  README.en.md  README.md  RELEASE_NOTES_v0.1.0.md  REPORT_ELBRUS_LLM_INFERENCE_2026-05-02.md  RESULTS.md  RESUME.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  TEST_PLAN.md  (+43 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  elbrus-sim.yml  release.yml
PIR/: PROMEPIR.py
airllm_nmcard/: __init__.py  inference.py  layer_loader.py  model_splitter.py  ops.py  tokenizer.py
benchmarks/: CMakeLists.txt  bench_mlp_single_epoch.py  bench_optimized.cpp  bench_promethorch.cpp  bench_pytorch.py  bench_pytorch_10models.py  bench_pytorch_vae.py  compare.py  compare_optimized.py  results_promethorch.json  results_pytorch.json  sgemm_peak_probe.c
c10/core/: Allocator.cpp  Allocator.h  Device.cpp  Device.h  ScalarType.h  Storage.h  TensorImpl.cpp  TensorImpl.h
c10/cuda/: CUDAAllocator.cpp  CUDAAllocator.h
c10/linq/: LinQAllocator.cpp  LinQAllocator.h
c10/macros/: Macros.h
c10/mps/: MPSAllocator.h  MPSAllocator.mm
c10/nmcard/: NMCardAllocator.cpp  NMCardAllocator.h
c10/nmquad/: NMQuadAllocator.h
c10/util/: Exception.cpp  Exception.h  Futex.h  MemoryDebug.h  ThreadPool.h
cmake/: FindcuDNN.cmake  PromeTorchConfig.cmake.in
cmake/toolchains/: aarch64-baikal-m.cmake  aarch64-baikal-s.cmake  e2k-elbrus.cmake  x86_64-alt.cmake  x86_64-astra.cmake  x86_64-redos.cmake
data/nanogpt_200k_attn_weights/: Wh.npy  bh.npy  config.json  embed.npy  (+25 more)
docker/: Dockerfile.alt  Dockerfile.astra  Dockerfile.baikal  Dockerfile.elbrus  Dockerfile.redos  Dockerfile.wheel  build-all.sh  docker-compose.yml
docs/: ADAM_KILLER_SPEC.md  BUILD_ELBRUS.md  BUILD_WINDOWS.md  COMPARISON_VS_PYTORCH_RU.md  GEMINI_AMD_INTEL_PLAN.md  MULTIHOST_SGD.md  PROMETHORCH_RU.md  ROCM.md
examples/: cuda_isolation_test.cpp  test_mem_leak.cpp  test_phase2.cpp  test_qat.cpp  train_10_models.cpp
examples/gguf/: CMakeLists.txt  test_gguf_inference.cpp
examples/mnist/: CMakeLists.txt  test_cuda_debug.cpp  test_phase2.cpp  train_10_models.cpp  train_mnist.cpp  train_mnist_cnn.cpp  train_mnist_cnn_autograd.cpp  train_mnist_mlp.cpp
examples/pir/: CMakeLists.txt  fused_step.h  fused_trainer.h  grad_sync.h  train_mlp.cpp  train_pir.cpp  train_pir_elbrus.cpp
examples/rnn/: CMakeLists.txt  train_rnn.cpp  train_rnn_full.cpp
examples/shakespeare/: CMakeLists.txt  model.h  train.cpp
examples/transformer/: CMakeLists.txt  train_transformer.cpp
examples/vit/: CMakeLists.txt  train_vit.cpp
nm_quad_nanogpt/: README.md  host_16core_fixed.cpp  host_4chip_safe.cpp  host_all16_batched.cpp  host_one_core.cpp  host_train_all.cpp  host_train_and_gen.cpp  host_train_real.cpp  infer.py  nanogpt_fwd.c  nanogpt_train.c  nanogpt_train_v2.c  nanogpt_train_v3.c  nanogpt_train_v4.c
nm_quad_qwen/: NMC4_FLOAT_BOTTLENECK.md  PATH_TO_3TOKS.md  QWEN_NMC4_PROGRESS.md  bisect_q6k_nan.py  check_embed.py  host_argmax.cpp  host_attn.cpp  host_fp_dot_bench.cpp  host_lm_head.cpp  host_q4k_gemv.cpp  host_q4k_gemv_4core.cpp  host_q4k_gemv_full.cpp  host_q4k_gemv_pthread.cpp  host_q4k_gemv_tile.cpp  host_q4k_test.cpp  host_q6k_16c_big.cpp  host_q6k_16core.cpp  host_q6k_4c_runtime.cpp  host_q6k_4core.cpp  host_q6k_gemv.cpp  host_q6k_test.cpp  host_qwen_attn_full.cpp  host_qwen_ffn.cpp  host_qwen_full_layer.cpp  host_qwen_layer.cpp  host_qwen_step1.cpp  host_qwen_step2.cpp  host_qwen_step3.cpp  host_qwen_step3b.cpp  host_rmsnorm.cpp  host_rope.cpp  host_silu_softmax.cpp  host_stream_layers.cpp  host_sync_ping.cpp  nmc_argmax.c  nmc_attn.c  nmc_dot_asm_test.c  nmc_fp_dot_bench.c  nmc_inline_asm_test.c  nmc_lm_head.c  (+42 more)
promeserve/: CMakeLists.txt  README.md  api_handlers.h  http_server.h  main.cpp  model_loader.h  model_manager.h  promeserve.h
promeserve/web/: index.html
promethorch/: __init__.py  transformers_compat.py
python/: setup.py
report/: report.html
scripts/: _build_cpu_gguf_win.bat  bench_phi3_llama_cpp.sh  build-alt.sh  build-astra.sh  build-baikal-cross.sh  build-cuda-windows.bat  build-elbrus.sh  build-redos.sh  dump_gguf_meta.py  dump_hidden_mistral.sh  dump_hidden_qwen3.sh  elbrus_audit_continue.sh  elbrus_audit_direct.sh  elbrus_audit_one.sh  elbrus_audit_remaining.sh  elbrus_audit_runner.sh  elbrus_llama_bench.sh  elbrus_night_runner.sh  elbrus_rebuild_runner.sh  extra_html_mistral.sh  full_russian_audit.sh  hipify.sh  html_demo_via_tp4.sh  multi_html_demo.sh  multi_html_v2.sh  multi_html_v3.sh  multi_html_v4.sh  multi_html_v5.sh  multihost_avg.py  multihost_sync.sh  one_html_proof.sh  one_shot_demo.sh  rebuild_test_gguf.sh  run_1proc_elbrus.sh  run_multihost.sh  run_one_model_bg.sh  run_one_singleproc.sh  run_promeserve_demo.sh  run_tp_elbrus.sh  russian_audit_singleproc.sh  (+45 more)
suda/: codegen.py
tests/: test_audio.cpp  test_autocast_wiring.cpp  test_ddp_no_sync.cpp  test_new_ops_2026_04_18.cpp  test_param_groups.cpp  test_pipeline_parallel.cpp  test_to_autograd.cpp  test_transformer_cuda_forward.cpp
torch/: serialization.h  serialization_pytorch.h
vliw_mission/: INTEGRATION_PLAN.md  MISSION_BRIEF.md  PHASE_7_3_PLAN.md  agent_1_e2k_architecture.md  agent_2_memory_bandwidth.md  agent_3_numa_audit.md  agent_4_threadpool_audit.md  agent_5_alternative_strategies.md  agent_6_elbrus_llm_intel.md  bisect_phase0-3_results.md  gemini_deep_research_max.md  gemini_speculative_decode.md  gemini_sse41_design.md
website/: index.html  script.js  style.css
НТЦ МОДУЛЬ БЕСЕДЫ/: ANALYSIS_REPORT.txt  CODEBASE_INDEX.txt
(+572 files in other folders)
